# fcc-gpt-course

./: .gitignore  pyproject.toml
notebooks/: bigram.ipynb
